tests/sksl/errors/golden/ConstructorTypeMismatch.glsl
### Compilation failed:

error: 4: expected 'float', but found 'bool'
error: 5: 'bool2' is not a valid parameter to 'float2' constructor
error: 6: 'float2' is not a valid parameter to 'bool2' constructor
error: 7: cannot construct 'bool'
error: 8: cannot construct 'Foo'
error: 9: invalid argument to 'float' constructor (expected a number or bool, but found 'Foo')
error: 10: 'Foo' is not a valid parameter to 'float2' constructor
error: 11: expected 'float', but found 'bool'
8 errors
